changed bootstrap grid

--- a/app/views/games/active.html.erb
+++ b/app/views/games/active.html.erb
@@ -6,12 +6,12 @@
     <div class="row nothing">
       <aside class="col-md-4 pull-left">
         <p id="demo"></p>
-        <div id="player-notification" class="callout callout-danger float" hidden>
+        <div id="player-notification" class="callout callout-danger" hidden>
           <h3>Answered:</h3>
           <ul></ul>
         </div>
       </aside>
-      <section class="col-md-3 col-l-3 col-xl-3 pull-right main-content inline-block">
+      <section class="col-md-8 pull-right main-content">
         <div class="box box-solid">
           <div class="box-header with-border">
             <i class="fa fa-text-width"></i>
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class ="row">
-          <div class="col-md-3 col-xs-6 inline-block" id="answer-box">
+          <div class="col-md-3" id="answer-box">
             <div class="box box-danger" id="answer-1">
               <div class="box-header with-border text-middle">
                 <i class="fa fa-play-circle fa-5x" aria-hidden="true"></i>  <span class="label label-primary">Choose A </span>
@@ -35,7 +35,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-xs-6 inline-block" id="answer-box">
+          <div class="col-md-3" id="answer-box">
             <div class="box box-danger" id="answer-2">
               <div class="box-header with-border text-middle">
                 <i class="fa fa-play-circle fa-5x" aria-hidden="true"></i>  <span class="label label-primary">Choose B</span>
@@ -46,7 +46,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-xs-6 inline-block" id="answer-box">
+          <div class="col-md-3" id="answer-box">
           <div class="box box-danger" id="answer-3">
             <div class="box-header with-border text-middle">
               <i class="fa fa-play-circle fa-5x" aria-hidden="true"></i>  <span class="label label-primary">Choose C</span>
@@ -57,7 +57,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-xs-6 inline-block" id="answer-box">
+        <div class="col-md-3" id="answer-box">
           <div class="box box-danger" id="answer-4">
             <div class="box-header with-border text-middle">
               <i class="fa fa-play-circle fa-5x" aria-hidden="true"></i>  <span class="label label-primary">Choose D</span>
